# Scrape

./: .dockerignore  .env.example  .gitattributes  .gitignore  ARCHITECTURE.md  Dockerfile  Makefile  README.md  dagster.yaml  docker-compose.yml  pyproject.toml  scrapy.cfg
src/wrc_pipeline/: __init__.py  cli.py  config.py  factories.py  hashing.py  logging_config.py  models.py  partitioning.py  sources.py
src/wrc_pipeline/orchestration/: __init__.py  definitions.py
src/wrc_pipeline/scraper/: __init__.py  accounting.py  items.py  middlewares.py  pipelines.py  runner.py  settings.py
src/wrc_pipeline/scraper/spiders/: __init__.py  wrc.py
src/wrc_pipeline/storage/: __init__.py  mongo.py  object_store.py
src/wrc_pipeline/transform/: __init__.py  html_cleaner.py  transformer.py
tests/: test_config.py  test_error_accounting.py  test_html_cleaner.py  test_idempotency.py  test_models.py  test_mongo_repository.py  test_partitioning.py  test_pdf_stub.py  test_spider_listing.py  test_transform.py
